<resources>
    <string name="app_name">Suitmedia</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">Check</string>
    <string name="next">Next</string>
    <string name="second_screen">Second Screen</string>
    <string name="welcome">Welcome</string>
    <string name="john_doe">John Doe</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="choose_user">Choose a User</string>
    <string name="third_screen">Third Screen</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">EMAIL@EMAIL.COM</string>
    <string name="is_palindrome">Is Palindrome</string>
    <string name="not_palindrome">Not Palindrome</string>
    <string name="avatar">User Avatar</string>
    <string name="ic_profile">Profile Icon</string>
    <string name="back">Back</string>
    <string name="empty_name">Please fill the name...</string>
    <string name="empty_palindrome">Please fill the text...</string>
    <string name="palindrome_result">Input Text Result</string>
    <string name="retry">Retry</string>
</resources>