<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvUseList"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivUserAvatar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/avatar"
            android:elevation="10dp"
            tools:src="@drawable/img_default_profile" />

        <TextView
            android:id="@+id/tvFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@+id/ivUserAvatar"
            app:layout_constraintTop_toTopOf="@+id/ivUserAvatar" />

        <TextView
            android:id="@+id/tvLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/tvFirstName"
            app:layout_constraintTop_toTopOf="@+id/tvFirstName" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/tvFirstName"
            app:layout_constraintTop_toBottomOf="@+id/tvFirstName" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/light_gray"
            app:layout_constraintTop_toBottomOf="@+id/ivUserAvatar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>